clang/test/BSC/Positive/Method/ambiguous_5/ambiguous_5.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s
// RUN: %clang -rewrite-bsc %s -o %t-rw.c
// RUN: FileCheck --input-file=%t-rw.c %s
// RUN: %clang_cc1 %t-rw.c -o %t-rw.output
// expected-no-diagnostics

struct _A {
};

typedef struct _A A;

struct _A A::foo() {
    A a;
    return a;
}

int main() {
  return 0;
}

// CHECK:      typedef struct _A A;
// CHECK-EMPTY:
// CHECK-NEXT: struct _A {
// CHECK-NEXT: };
// CHECK-EMPTY:
// CHECK-NEXT: struct _A A_foo(void) {
// CHECK-NEXT:   A a;
// CHECK-NEXT:   return a;
// CHECK-NEXT: }